[FIX] Body overflow and prettify csss

--- a/css/cover.css
+++ b/css/cover.css
@@ -139,7 +139,7 @@ body {
     top: 0;
   }
   .mastfoot {
-    position: fixed;
+    position: relative;
     bottom: 0;
   }
   /* Start the vertical centering */
@@ -164,6 +164,8 @@ body {
 
 
 /* Additional styling */
+
+body{overflow-x: hidden;}
 
 .cover-container {
 	text-align: left;
